# FinalYearProject

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README  build.sh
deploy/192.168.216.5/: balancer.conf  forwarding.conf
docs/html/: graph_legend.html  index.html
old-shit/balancer/: CMakeLists.txt  balancer.c  gre.c  old_stub_server.c  oldbalancer.c  oldoldbalancer.c  pcap.c  sniff.c  stub_server.c
old-shit/client/: CMakeLists.txt  client.c  client.h  oldclient.c
old-shit/server/: CMakeLists.txt  server.c  server.h
src/balancer/: CMakeLists.txt  balancer.h
src/balancer-cli/: go.sum  main.go
src/balancer-xdp/: Makefile  encap.h  map_utils.h  maps.h  sha.h  t1.txt  xdp_balancer.c  xdp_balancer.ll  xdp_pass.c  xdp_pass.ll
src/balancer-xdp-backup/: Makefile  Makefile-pass  blake3.h  encap.h  hash.c  map_utils.h  maps.h  rewriting_helpers.h  xdp_balancer.c  xdp_pass.c
src/balancer-xdp-backup/folder/: xdp_balancer_kern.h  xdp_balancer_kern.ll
src/balancer-xdp-backup/test/: blake3.h  blake3_impl.h  main.c
src/balancer-xdp/folder/: xdp_balancer_kern.c
src/balancer-xdp/t2/: main  main-old-old.c  main.c  (+3 more)
src/client/: CMakeLists.txt
src/common/: gue.h  parsing_helpers.h
src/lb-cli/: main.go
src/lb-packet-stats/: stats.go
src/lb-xdp/: .gitignore  Makefile  map_utils.h  maps.h  siphash.h  xdp_balancer.c
src/redirect-netfilter/: .gitignore  Makefile  ipt_redirect.c  ipt_redirect.h  libxt_redirect.c
src/server/: CMakeLists.txt  server.cpp
src/server-xdp/: Makefile  xdp_decapsulator.c  xdp_decapsulator.h  xdp_decapsulator.ll
(+14 files in other folders)
